# kinematics_interface_delta

./: CMakeLists.txt  README.md  kinematics_interface_delta_plugins.xml  package.xml
.github/workflows/: build.yml
include/kinematics_interface_delta/: delta_kinematics.hpp  delta_plugin.hpp
src/: delta_kinematics.cpp  delta_plugin.cpp  test_delta_kinematics.cpp
test/: test_delta_gtest.cpp  test_pluginlib_load.cpp
